--- a/package.json
+++ b/package.json
@@ -5,22 +5,22 @@
   "scripts": {
     "dev": "vite --port 8888",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "vercel --prod"
   },
   "dependencies": {
-    "axios": "^1.6.8",
-    "gsap": "^3.12.5",
-    "pinia": "^2.1.7",
-    "tone": "^14.7.77",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
-    "vuetify": "^3.10.7"
+    "pinia": "^2.1.7",
+    "axios": "^1.6.8",
+    "tone": "^14.7.77",
+    "gsap": "^3.12.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
+    "vite": "^5.2.0",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
-    "vite": "^5.2.0"
+    "tailwindcss": "^3.4.3"
   }
 }
