--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
     "deploy": "vercel --prod"
   },
   "dependencies": {
-    "vue": "^3.4.21",
-    "vue-router": "^4.3.0",
-    "pinia": "^2.1.7",
     "axios": "^1.6.8",
+    "gsap": "^3.12.5",
+    "pinia": "^2.1.7",
+    "three": "^0.160.1",
     "tone": "^14.7.77",
-    "gsap": "^3.12.5"
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
-    "vite": "^5.2.0",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.3",
+    "vite": "^5.2.0"
   }
 }
